# gptlab

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
.well-known/: ai-plugin.json
gptlab/: gitlab.py  models.py
stack/: Dockerfile
static/: openapi.yaml
